--- a/Section 5/Omnifood/index.html
+++ b/Section 5/Omnifood/index.html
@@ -3,6 +3,8 @@
     <head>
         <!--This is a imported css call normalize-->
         <link rel="stylesheet" type="text/css" href="vendors/css/normalize.css">
+        <!--This is a imported css grid-->
+        <link rel="stylesheet" type="text/css" href="vendors/css/grid.css">
         <!-- This is the css sheet we created-->
         <link rel="stylesheet" type="text/css" href="resources/css/style.css">
         <!-- This is the font of the page: Lato-->
@@ -11,7 +13,8 @@
         <title>Omnifood</title>
     </head>
     <body>
-        <h1>Omnifood</h1>
-
+        <div class="row">
+            <h1>Omnifood</h1>
+        </div>
     </body>
 </html>
