--- a/Section 5/Omnifood/index.html
+++ b/Section 5/Omnifood/index.html
@@ -8,17 +8,18 @@
         <!-- This is the css sheet we created-->
         <link rel="stylesheet" type="text/css" href="resources/css/style.css">
         <!-- This is the font of the page: Lato-->
-        <link href="https://fonts.googleapis.com/css?family=Lato&display=swap" rel="stylesheet">
+        <link href="https://fonts.googleapis.com/css?family=Lato:100,300,300i,400&display=swap" rel="stylesheet">
+
         <meta charset="UTF-8">
         <title>Omnifood</title>
     </head>
     <body>
         <header>
             <div class="hero-text-box">
-                <h1>Goodbye junk food. Hello super healthy meals.</h1>
+                <h1>Goodbye junk food.<br>Hello super healthy meals.</h1>
                 <!--TODO add real link -->
-                <a href="#">I’m hungry</a>
-                <a href="#">Show me more</a>
+                <a class="btn btn-full" href="#">I’m hungry</a>
+                <a class="btn btn-ghost" href="#">Show me more</a>
             </div>
 
 
