Updated HTML & CSS Header section 4
Moved: images to resource file
Added: navigation bar
Added: logo
Added: white boarder to ghost and full button

--- a/Section 3/index.html
+++ b/Section 3/index.html
@@ -48,7 +48,7 @@
                 </div>
             </div>
 
-            <!-- this clearfix was not explained TODO -->
+            <!-- TODO this clearfix was not explained -->
             <div class="clearfix"></div>
 
             <div class="author-box">
