--- a/Section 5/Omnifood/index.html
+++ b/Section 5/Omnifood/index.html
@@ -82,7 +82,7 @@
 
         <section class="section-meals">
 
-            <ul class="meals-showcase">
+            <ul class="meals-showcase clearfix">
                 <li>
                     <figure class="meal-photo">
                         <img src="resources/img/1.jpg" alt="Korean bibimbap with egg and vegetables">
@@ -104,7 +104,7 @@
                     </figure>
                 </li>
             </ul>
-            <ul class="meals-showcase">
+            <ul class="meals-showcase clearfix">
                 <li>
                     <figure class="meal-photo">
                         <img src="resources/img/5.jpg" alt="Paleo beef steak with vegetables">
@@ -127,15 +127,16 @@
                 </li>
             </ul>
         </section>
+
         <section class="section-steps">
             <div class="row">
                 <h2>How it works &mdash; Simple as 1, 2, 3</h2>
             </div>
             <div class="row">
-                <div class="col span-1-of-2">
+                <div class="col span-1-of-2 steps-box">
                     <img src="resources/img/app-iPhone.png" alt="Omnifood App Iphone" class="app-screen">
                 </div>
-                <div class="col span-1-of-2">
+                <div class="col span-1-of-2 steps-box">
                     <div class="works-step">
                         <div>1</div>
                         <p>Choose the subscription plan that best fits your needs and sign up today.</p>
@@ -151,7 +152,6 @@
                     
                     <a href="#" class="btn-app"><img src="resources/img/download-app.svg" alt="App Store Buttons"></a>
                     <a href="#" class="btn-app"><img src="resources/img/download-app-android.png" alt="Play Store Buttons"></a>
-                    
                 </div>
             </div>
         </section>
