--- a/Section 5/Omnifood/index.html
+++ b/Section 5/Omnifood/index.html
@@ -165,64 +165,64 @@
                     <img src="resources/img/lisbon-3.jpg" alt="Lisbon">
                     <h3>Lisbon</h3>
                     <div class="city-future">
-                        <i class="ion-ios-person"></i>
+                        <i class="ion-ios-person icon-small"></i>
                         1600+ happy eaters
                     </div>
                     <div class="city-future">
-                        <i class="ion-ios-star"></i>
+                        <i class="ion-ios-star icon-small"></i>
                         60+ top chefs
                     </div>
                     <div class="city-future">
-                        <i class="ion-social-twitter"></i>
-                        @omnifood_lx
+                        <i class="ion-social-twitter icon-small"></i>
+                        <a href="#">@omnifood_lx</a>
                     </div>
                 </div>
                 <div class="col span-1-of-4 feature-box">
                     <img src="resources/img/san-francisco.jpg" alt="San Francisco">
                     <h3>San Francisco</h3>
                     <div class="city-future">
-                        <i class="ion-ios-person"></i>
+                        <i class="ion-ios-person icon-small"></i>
                         3700+ happy eaters
                     </div>
                     <div class="city-future">
-                        <i class="ion-ios-star"></i>
+                        <i class="ion-ios-star icon-small"></i>
                         160+ top chefs
                     </div>
                     <div class="city-future">
-                        <i class="ion-social-twitter"></i>
-                        @omnifood_sf
+                        <i class="ion-social-twitter icon-small"></i>
+                        <a href="#">@omnifood_sf</a>
                     </div>
                 </div>
                 <div class="col span-1-of-4 feature-box">
                     <img src="resources/img/berlin.jpg" alt="Berlin">
                     <h3>Berlin</h3>
                     <div class="city-future">
-                        <i class="ion-ios-person"></i>
+                        <i class="ion-ios-person icon-small"></i>
                         2300+ happy eaters
                     </div>
                     <div class="city-future">
-                        <i class="ion-ios-star"></i>
+                        <i class="ion-ios-star icon-small"></i>
                         110+ top chefs
                     </div>
                     <div class="city-future">
-                        <i class="ion-social-twitter"></i>
-                        @omnifood_berlin
+                        <i class="ion-social-twitter icon-small"></i>
+                        <a href="#">@omnifood_berlin</a>
                     </div>
                 </div>
                 <div class="col span-1-of-4 feature-box">
                     <img src="resources/img/london.jpg" alt="London">
                     <h3>London</h3>
                     <div class="city-future">
-                        <i class="ion-ios-person"></i>
+                        <i class="ion-ios-person icon-small"></i>
                         1200+ happy eaters
                     </div>
                     <div class="city-future">
-                        <i class="ion-ios-star"></i>
+                        <i class="ion-ios-star icon-small"></i>
                         50+ top chefs
                     </div>
                     <div class="city-future">
-                        <i class="ion-social-twitter"></i>
-                        @omnifood_london
+                        <i class="ion-social-twitter icon-small"></i>
+                        <a href="#">@omnifood_london</a>
                     </div>
                 </div>
             </div>
@@ -233,11 +233,6 @@
 </html>
 
 <!--
-
-
-
-
-
 
 Section 5: Customer testimonials
 Title: Our customers can't live without us
@@ -263,7 +258,6 @@ Order 24/7
 Access to newest creations
 Free delivery
 
-
 Plan 2: Pro
 149$ per month
 That’s only 14.90$ per meal
@@ -271,7 +265,6 @@ That’s only 14.90$ per meal
 Order 24/7
 Access to newest creations
 Free delivery
-
 
 Plan 3: Starter
 19$ per meal
