Added/Updated queries and formatting
Updated: index.html to reflect browser size (screen size)
Added: queries.css for 0px up to 1200px wide (browser width size)
Update: README.md
Removed: unneeded text documents that were needed to create index.html

--- a/Section 5/Omnifood/index.html
+++ b/Section 5/Omnifood/index.html
@@ -1,12 +1,16 @@
 <!DOCTYPE html>
 <html lang="en">
 <head>
+    <!-- This is a meta tag queries.css-->
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <!--This is a imported css call normalize-->
     <link rel="stylesheet" type="text/css" href="vendors/css/normalize.css">
     <!--This is a imported css grid-->
     <link rel="stylesheet" type="text/css" href="vendors/css/grid.css">
     <!-- This is the css sheet we created-->
     <link rel="stylesheet" type="text/css" href="resources/css/style.css">
+    <!-- This is the css sheet for responsive web page (Fits to the screen from small phone to large monitors-->
+    <link rel="stylesheet" type="text/css" href="resources/css/queries.css">
     <!-- This is the font of the page: Lato-->
     <link href="https://fonts.googleapis.com/css?family=Lato:100,300,300i,400&display=swap" rel="stylesheet">
     <!-- This is the icon for the page features-->
