Added jquery script
Added: script.js with test jquery code.
Updated: Readme.md

--- a/Section 5/Omnifood/index.html
+++ b/Section 5/Omnifood/index.html
@@ -418,14 +418,16 @@
         </div>
     </footer>
 
+    <!-- This adds the jquery library to our project-->
+    <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.4.1/jquery.min.js"></script>
     <!-- This allows us to polyfill for min/max-width css3 media queries for legacy browser-->
     <script src="https://cdn.jsdelivr.net/npm/respond.js@1.4.2/dest/respond.min.js"></script>
     <!-- This allows us to use HTML5 sectioning elements in legacy browsers-->
     <script src="https://cdn.jsdelivr.net/npm/html5shiv@3.7.3/dist/html5shiv.min.js"></script>
     <!-- This allows us to use css3 pseudo-classes and attributes selector in legacy browsers-->
     <script src="https://cdn.jsdelivr.net/npm/selectivizr@1.0.3/selectivizr.min.js"></script>
-    <!-- This is js file for a later lecture-->
-    <!-- <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.3.1/jquery.min.js"></script> -->
+    <!-- This is the javascript file that we are creating-->
+    <script src="resources/js/script.js"></script>
 
 </body>
 </html>
