--- a/Section 5/Omnifood/index.html
+++ b/Section 5/Omnifood/index.html
@@ -22,7 +22,7 @@
 </head>
 <body>
     <header>
-        <nav class = "sticky">
+        <nav>
             <div class="row">
                 <img src="resources/img/logo-white.png" alt="Omnifood logo" class="logo">
                 <img src="resources/img/logo.png" alt="Omnifood logo" class="logo-black">
@@ -41,7 +41,7 @@
             <a class="btn btn-ghost" href="#">Show me more</a>
         </div>
     </header>
-    <section class="section-features">
+    <section class="section-features js--section-features">
 
         <div class="row">
             <h2>Get food fast &mdash; not fast food</h2>
@@ -427,6 +427,8 @@
     <script src="https://cdn.jsdelivr.net/npm/html5shiv@3.7.3/dist/html5shiv.min.js"></script>
     <!-- This allows us to use css3 pseudo-classes and attributes selector in legacy browsers-->
     <script src="https://cdn.jsdelivr.net/npm/selectivizr@1.0.3/selectivizr.min.js"></script>
+    <!-- This is a javascript file for waypoint-->
+    <script src="vendors/js/jquery.waypoints.min.js"></script>
     <!-- This is the javascript file that we are creating-->
     <script src="resources/js/script.js"></script>
 
