--- a/Section 5/Omnifood/index.html
+++ b/Section 5/Omnifood/index.html
@@ -1,8 +1,12 @@
 <!DOCTYPE html>
 <html lang="en">
 <head>
+
+    <meta charset="UTF-8">
     <!-- This is a meta tag queries.css-->
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <!-- This is a meta tag for search engine description-->
+    <meta name="description" content="Omnifood is a premium food delivery service with the mission to bring affordable and healthy meals to as many people as possible.">
     <!--This is a imported css call normalize-->
     <link rel="stylesheet" type="text/css" href="vendors/css/normalize.css">
     <!--This is a imported css grid-->
@@ -19,7 +23,6 @@
     <!-- This is for Animation on scroll-->
     <link rel="stylesheet" type="text/css" href="vendors/css/animate.css">
 
-    <meta charset="UTF-8">
     <title>Omnifood</title>
 
     <!-- This is the icons needed for the tab and mobile home screen-->
