--- a/Section 5/Omnifood/index.html
+++ b/Section 5/Omnifood/index.html
@@ -450,6 +450,15 @@
     <script src="vendors/js/jquery.waypoints.min.js"></script>
     <!-- This is the javascript file that we are creating-->
     <script src="resources/js/script.js"></script>
+    <!-- This is google analytics script-->
+    <!-- Global site tag (gtag.js) - Google Analytics -->
+    <script async src="https://www.googletagmanager.com/gtag/js?id=UA-145260140-1"></script>
+    <script>
+        window.dataLayer = window.dataLayer || [];
+        function gtag(){dataLayer.push(arguments);}
+        gtag('js', new Date());
 
+        gtag('config', 'UA-145260140-1');
+    </script>
 </body>
 </html>
