--- a/Section 6/Flexbox/index.html
+++ b/Section 6/Flexbox/index.html
@@ -5,6 +5,7 @@
     <title>Flexbox</title>
     <!-- This is the css sheet we created-->
     <link rel="stylesheet" type="text/css" href="style.css">
+    <link rel="stylesheet" type="text/css" href="roboto_font.css">
 </head>
 <body>
     <figure class="pizza">
@@ -12,8 +13,13 @@
             <img src="https://images.unsplash.com/photo-1474600056930-615c3d706456?ixlib=rb-1.2.1&ixid=eyJhcHBfaWQiOjEyMDd9&auto=format&fit=crop&w=1052&q=80" alt="Pizza" class="pizza__img">
         </div>
         <div class="pizza__content">
-            CONTENT
+            <div class="pizza__title">
+               <h1 class="pizza__heading">Pizza Vegetale 👌</h1>
+                <div class="pizza__tag pizza__tag--1">#vegeterian</div>
+                <div class="pizza__tag pizza__tag--2">#italian</div>
+            </div>
         </div>
+
         <div class="pizza__price">$11.99</div>
     </figure>
 
