--- a/Section 6/Flexbox/index.html
+++ b/Section 6/Flexbox/index.html
@@ -10,11 +10,12 @@
 <body>
     <figure class="pizza">
         <div class="pizza__hero">
-            <img src="https://images.unsplash.com/photo-1474600056930-615c3d706456?ixlib=rb-1.2.1&ixid=eyJhcHBfaWQiOjEyMDd9&auto=format&fit=crop&w=1052&q=80" alt="Pizza" class="pizza__img">
+            <img src="https://images.unsplash.com/photo-1474600056930-615c3d706456?ixlib=rb-1.2.1&ixid=eyJhcHBfaWQiOjEyMDd9&auto=format&fit=crop&w=1052&q=80"
+                 alt="Pizza" class="pizza__img">
         </div>
         <div class="pizza__content">
             <div class="pizza__title">
-               <h1 class="pizza__heading">Pizza Vegetale 👌</h1>
+                <h1 class="pizza__heading">Pizza Vegetale 👌</h1>
                 <div class="pizza__tag pizza__tag--1">#vegeterian</div>
                 <div class="pizza__tag pizza__tag--2">#italian</div>
             </div>
