--- a/Section 6/Flexbox/index.html
+++ b/Section 6/Flexbox/index.html
@@ -19,6 +19,8 @@
                 <div class="pizza__tag pizza__tag--1">#vegeterian</div>
                 <div class="pizza__tag pizza__tag--2">#italian</div>
             </div>
+            <p class="pizza__description">Yummy veggie pizza with tasty olives, crisp peppers, fresh arugula and
+                original italian tomato sauce.</p>
         </div>
 
         <div class="pizza__price">$11.99</div>
